# Langchain-KB

./: .env.example  README.md  app.py  pvt_notes.md  pyproject.toml
askviridium/: README.md  additional_info.py  data.json  findchemicals_prompt.txt  original_prompt.txt  pyproject.toml  replicate.py  twostep.py
askviridium/app/: app.py  data.json  global_constants.py
askviridium/testing/: additional_info.py  replicate.py  twostep.py
notes/: askvai.md  codereview.md  metadata-considerations.md
output_parsing/: function_calling.py
split-experiment/: SATS.py  main.py  test.py
split-experiment/recursive/: Q0_recursive_brkpt_95_output.txt  Q10_recursive.txt  Q10_recursive_95.txt  Q1_recursive.txt  Q1_recursive_95.txt  Q1_recursive_brkpt_95_output.txt  Q2_recursive.txt  Q2_recursive_95.txt  Q2_recursive_brkpt_95_output.txt  Q3_recursive.txt  Q3_recursive_95.txt  Q3_recursive_brkpt_95_output.txt  Q4_recursive.txt  Q4_recursive_95.txt  Q4_recursive_brkpt_95_output.txt  Q5_recursive.txt  Q5_recursive_95.txt  Q5_recursive_brkpt_95_output.txt  Q6_recursive.txt  Q6_recursive_95.txt  Q6_recursive_brkpt_95_output.txt  Q7_recursive.txt  Q7_recursive_95.txt  Q7_recursive_brkpt_95_output.txt  Q8_recursive.txt  Q8_recursive_95.txt  Q8_recursive_brkpt_95_output.txt  Q9_recursive.txt  Q9_recursive_95.txt  Q9_recursive_brkpt_95_output.txt
split-experiment/section_aware/: Q10_section_aware_95.txt  Q1_section_aware_95.txt  Q2_section_aware_95.txt  Q3_section_aware_95.txt  Q4_section_aware_95.txt  Q5_section_aware_95.txt  (+4 more)
split_experiment/: main.py  recursive.json  semantic.json
(+193 files in other folders)
