[tool.poetry]
name = "langchain-kb"
version = "0.1.0"
description = "Knowledge Base implementation using Langchain"
authors = ["last-brain-cell <naadkd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
