[tool.poetry]
name = "langchain-kb"
version = "0.1.0"
description = "Knowledge Base implementation using Langchain"
authors = ["last-brain-cell <naadkd@gmail.com>", "yasho-bapat <yashobapat3006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
numpy = "1.26.4"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
langchain-experimental = "^0.0.60"
langchain-openai = "^0.1.8"
langchain-chroma = "^0.1.1"
pypdf = "^4.2.0"
black = "^24.4.2"
postgres = "^4.0"
langchain-postgres = "^0.0.6"
psycopg = "^3.1.19"
spacy = "^3.7.5"
streamlit = "^1.35.0"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
